fix(classification-marking): applying font-size, text-align, to all and inline-block to hotst:[tag] elements

--- a/packages/web-components/src/components/rux-classification-marking/rux-classification-marking.scss
+++ b/packages/web-components/src/components/rux-classification-marking/rux-classification-marking.scss
@@ -1,6 +1,13 @@
 :host {
     display: block;
+    font-size: var(--font-body-1-bold-font-size); /*This is here to fix the issue of setting font-size on parent and having it override the component styling*/
+    text-align: center;
+}
+
+:host([tag]) {
+    display: inline-block;
     font-size: var(--font-body-2-bold-font-size); /*This is here to fix the issue of setting font-size on parent and having it override the component styling*/
+    text-align: left;
 }
 
 :host([hidden]) {
